<resources>
    <string name="app_name">PresentationProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_open">open</string>
    <string name="nav_close">close</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_tableBooking">Table Booking</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_community">Community</string>
    <string name="menu_share">Share\n</string>
    <string name="menu_about">About</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_home">Home</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_wishlist">Wishlist</string>
    <string name="address">Soronika, Savar, Dhaka, Bangladesh</string>
    <string name="bio">A professional bio or biography is a short overview of your experience. Professional bios usually include details about education, employment, achievements, and relevant skills."</string>
</resources>