<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--    <group>-->
    <!--        <item-->
    <!--            android:id="@+id/profile"-->
    <!--            android:icon="@color/black"-->
    <!--            android:title="Profile" />-->
    <!--        <item-->
    <!--            android:id="@+id/tableBooking"-->
    <!--            android:icon="@color/black"-->
    <!--            android:title="Table Booking" />-->
    <!--        <item-->
    <!--            android:id="@+id/setting"-->
    <!--            android:icon="@color/black"-->
    <!--            android:title="Setting" />-->
    <!--        <item-->
    <!--            android:id="@+id/logout"-->
    <!--            android:icon="@color/black"-->
    <!--            android:title="Logout" />-->
    <!--    </group>-->

    <!--    <group>-->
    <!--        <item-->
    <!--            android:menuCategory="system"-->
    <!--            android:id="@+id/about"-->
    <!--            android:icon="@color/black"-->
    <!--            android:title="About" />-->
    <!--        <item-->
    <!--            android:id="@+id/share"-->
    <!--            android:icon="@color/black"-->
    <!--            android:title="Share" />-->
    <!--    </group>-->

    <!--</menu>-->

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_user"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/tableBooking"
            android:icon="@drawable/ic_table"
            android:title="@string/menu_tableBooking" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
    </group>

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/setting"
            android:icon="@drawable/ic_setting"
            android:title="@string/menu_setting" />

    </group>

    <item android:title="@string/menu_community">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_share"
                    android:title="@string/menu_share" />

                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_about"
                    android:title="@string/menu_about" />
            </group>
        </menu>
    </item>

</menu>